Cleanups, continued.